# elevenlabs

./: .gitignore  .replit  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.streamlit/: config.toml
attached_assets/: app.py  database.py  env.py  ethereum_manager.py  models.py  pyproject.toml  requirements.txt  voice.py  voice_utils.py
attached_assets/conversational_call/: main.py
static/: styles.css
